api/swim_form/src/tests/derive/form/double_body_attr.stderr
error: At most one field can replace the body.
  --> $DIR/src/tests/derive/form/double_body_attr.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
